<resources>
    <string name="app_name">Tetris</string>
    <string name="main_name">TETRIS</string>
    <string name="best_score">BEST SCORE:</string>
    <string name="start_game">Start Game</string>
    <string name="reset_score">Reset Score</string>
    <string name="options">Options</string>
    <string name="exit">Exit</string>
    <string name="current_score">Current Score:</string>
    <string name="high_score">High Score:</string>
    <string name="restart">Restart</string>
    <string name="pause">PAUSE</string>
    <string name="continue_game">CONTINUE</string>
    <string name="start">START</string>
</resources>